@@ -4,7 +4,7 @@
  *  This file is part of the Munge Uid 'N' Gid Emporium (MUNGE).
  *  For details, see <http://www.llnl.gov/linux/munge/>.
  *
- *  Copyright (C) 2003-2005 The Regents of the University of California.
+ *  Copyright (C) 2003-2006 The Regents of the University of California.
  *  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
  *  Written by Chris Dunlap <cdunlap@llnl.gov>.
  *  UCRL-CODE-155910.
@@ -90,10 +90,16 @@ _crypto_thread_id (void)
 static void
 _crypto_thread_locking (int mode, int n, const char *file, int line)
 {
-    if (mode & CRYPTO_LOCK)
-        pthread_mutex_lock (&crypto_mutex_buf[n]);
-    else
-        pthread_mutex_unlock (&crypto_mutex_buf[n]);
+    if (mode & CRYPTO_LOCK) {
+        if (pthread_mutex_lock (&crypto_mutex_buf[n]) != 0) {
+            abort ();
+        }
+    }
+    else {
+        if (pthread_mutex_unlock (&crypto_mutex_buf[n]) != 0) {
+            abort ();
+        }
+    }
     return;
 }
 
@@ -104,9 +110,12 @@ _crypto_thread_dynlock_create (const char *file, int line)
 {
     struct CRYPTO_dynlock_value *lock;
 
-    if (!(lock = malloc (sizeof (struct CRYPTO_dynlock_value))))
-        return (NULL);
-    pthread_mutex_init (&lock->mutex, NULL);
+    if (!(lock = malloc (sizeof (struct CRYPTO_dynlock_value)))) {
+        abort ();
+    }
+    if (pthread_mutex_init (&lock->mutex, NULL) != 0) {
+        abort ();
+    }
     return (lock);
 }
 
@@ -115,10 +124,16 @@ static void
 _crypto_thread_dynlock_lock (int mode, struct CRYPTO_dynlock_value *lock,
                           const char *file, int line)
 {
-    if (mode & CRYPTO_LOCK)
-        pthread_mutex_lock (&lock->mutex);
-    else
-        pthread_mutex_unlock (&lock->mutex);
+    if (mode & CRYPTO_LOCK) {
+        if (pthread_mutex_lock (&lock->mutex) != 0) {
+            abort ();
+        }
+    }
+    else {
+        if (pthread_mutex_unlock (&lock->mutex) != 0) {
+            abort ();
+        }
+    }
     return;
 }
 
@@ -127,7 +142,9 @@ static void
 _crypto_thread_dynlock_destroy (struct CRYPTO_dynlock_value *lock,
                              const char *file, int line)
 {
-    pthread_mutex_destroy (&lock->mutex);
+    if (pthread_mutex_destroy (&lock->mutex) != 0) {
+        abort ();
+    }
     free (lock);
     return;
 }
@@ -144,16 +161,16 @@ crypto_thread_init (void)
     int n;
     int i;
 
-    if (crypto_mutex_buf)
+    if (crypto_mutex_buf) {
         return (1);
-
+    }
     n = CRYPTO_num_locks ();
-    if (!(crypto_mutex_buf = malloc (n * sizeof (pthread_mutex_t))))
+    if (!(crypto_mutex_buf = malloc (n * sizeof (pthread_mutex_t)))) {
         return (0);
-
-    for (i=0; i<n; i++)
+    }
+    for (i=0; i<n; i++) {
         pthread_mutex_init (&crypto_mutex_buf[i], NULL);
-
+    }
     CRYPTO_set_id_callback (_crypto_thread_id);
     CRYPTO_set_locking_callback (_crypto_thread_locking);
 
@@ -173,9 +190,9 @@ crypto_thread_fini (void)
     int n;
     int i;
 
-    if (!crypto_mutex_buf)
+    if (!crypto_mutex_buf) {
         return (0);
-
+    }
     CRYPTO_set_id_callback (NULL);
     CRYPTO_set_locking_callback (NULL);
 
@@ -186,8 +203,9 @@ crypto_thread_fini (void)
 #endif /* !HAVE_CRYPTO_DYNLOCK */
 
     n = CRYPTO_num_locks ();
-    for (i=0; i<n; i++)
+    for (i=0; i<n; i++) {
         pthread_mutex_destroy (&crypto_mutex_buf[i]);
+    }
     free (crypto_mutex_buf);
     crypto_mutex_buf = NULL;
     return (1);
