@@ -1,5 +1,7 @@
 2006-01-12  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/munged/crypto_thread.c: Added checks to abort on error.
+
 	* src/libmunge/decode.c(_decode_rsp):
 	  Fixed bug where routine not aborted after EMUNGE_NO_MEMORY set.
 
